Bug 290182 - Dolphin 2.0 shows an empty directory if started with a parameter and in split mode
Summary: Dolphin 2.0 shows an empty directory if started with a parameter and in split...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 1.99
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-30 14:22 UTC by Sebastian Dörner
Modified: 2012-01-05 20:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments
Screenshot showing the problem. (34.03 KB, image/jpeg)
2011-12-30 14:22 UTC, Sebastian Dörner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian Dörner 2011-12-30 14:22:33 UTC
Created attachment 67247 [details]
Screenshot showing the problem.

Version:           1.99 (using Devel) 
OS:                Linux

Enable split view mode by default. Then start dolphin with a parameter (directory) from the command line. The directory is shown on the right, but there are no files visible. The breadcrumb shows the correct folder and I can even see miniatures of the image files in the info panel, but the right hand side of the split view is empty.

Reproducible: Always

Steps to Reproduce:
1. Enable split view mode by default in the settings.
2. Close Dolphin.
3. Start Dolphin from the command line with a directory as first parameter, e.g. "dolphin /data/wallpapers".

Actual Results:  
Right view container is empty.

Expected Results:  
Right view container should show the files in "/data/wallpapers".
Comment 1 Florian Staudacher 2011-12-30 23:10:29 UTC
I can confirm this behaviour with the version from the Archlinux kde-unstable repository, updated yesterday.

Dolphin version 1.99
KDE 4.7.95 (4.8 RC1 (4.7.95)

This also happens if you don't close and reopen the spit view but instead go to the same directory as on the left side (either by directly typing in the location bar or via the favourites toolbar), then back (via back-button), winding up in the directory that was not displayed before, only now the contents are shown.
If you now click on a "new" (sub-)directory in the split window, the contents are again not shown, but going back once and clicking on the same directory again, the content suddenly appears normally.

This is reproducible always, recursively and with every "unvisited" folder.

The same actions in the left half of the window work exactly as expected.
Comment 2 Peter Penz 2012-01-05 20:25:19 UTC
Git commit 2150941600fff22f28b4c71f63e4d666af7086ca by Peter Penz.
Committed on 05/01/2012 at 21:23.
Pushed by ppenz into branch 'KDE/4.8'.

Fix issue that an empty directory is shown in the split mode

Root-cause was that the signal KDirLister::completed(KUrl) must be watched
by the model and not KDirLister::completed().
FIXED-IN: 4.8.0

M  +1    -1    dolphin/src/kitemviews/kfileitemmodel.cpp

http://commits.kde.org/kde-baseapps/2150941600fff22f28b4c71f63e4d666af7086ca
Comment 3 Peter Penz 2012-01-05 20:25:48 UTC
Git commit ff50a6eaa08d1f21f4c0f15dc09f7b8a2238fb3c by Peter Penz.
Committed on 05/01/2012 at 21:23.
Pushed by ppenz into branch 'master'.

Fix issue that an empty directory is shown in the split mode

Root-cause was that the signal KDirLister::completed(KUrl) must be watched
by the model and not KDirLister::completed().
FIXED-IN: 4.8.0

M  +1    -1    dolphin/src/kitemviews/kfileitemmodel.cpp

http://commits.kde.org/kde-baseapps/ff50a6eaa08d1f21f4c0f15dc09f7b8a2238fb3c