Fix issue that an empty directory is shown in the split mode

Root-cause was that the signal KDirLister::completed(KUrl) must be watched
by the model and not KDirLister::completed().

BUG: 290182
FIXED-IN: 4.8.0